--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <audio id="myAudio"
         src="1. My Life Is Going on _ La Casa De Papel (Banda Sonora Original La Casa De Papel).mp3"></audio>
     <header>
-        <div><img class="logo" src="image/logo.png"></div>
+        <div><img class="logo" src="logo.png"></div>
         <ul>
             <li><a class="s" href="#">SERVICES</a></li>
             <li><a class="s" href="#">ABOUT US</a></li>
@@ -49,7 +49,7 @@
         </div>
         <div class="right">
             <div class="img-pic">
-                <img src="image/pic1.jpg" class="img-pic">
+                <img src="pic1.jpg" class="img-pic">
                 <div class="box-slider">
                     <div class="circle-1"></div>
                     <div class="circle-2"></div>
