--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <div><a href="index.html"><img class="logo" src="image/logo.png"></a></div>
+        <div><a href="index.html"><img class="logo" src="logo.png"></a></div>
         <ul>
             <li><a class="s" href="#">SERVICES</a></li>
             <li><a class="s" href="#">ABOUT US</a></li>
